--- a/Programa cadastra produtos/Projeto1.0.1/nbproject/project.properties
+++ b/Programa cadastra produtos/Projeto1.0.1/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Projeto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jtds-1.3.1.jar=Z:\\Cotuca\\4\u00ba Semestre\\Pr\u00e1tica Profissional I\\trabalho\\jtds-1.3.1.jar
+file.reference.jtds-1.3.1.jar-1=Z:\\Cotuca\\4\u00ba Semestre\\Pr\u00e1tica Profissional I\\trabalho\\Programa cadastra produtos\\jtds-1.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jtds-1.3.1.jar}
+    ${file.reference.jtds-1.3.1.jar}:\
+    ${file.reference.jtds-1.3.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
